--- a/oj-server/package.json
+++ b/oj-server/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
-    "mongoose": "^4.8.7"
+    "mongoose": "^4.8.7",
+    "redis": "^2.7.1",
+    "socket.io": "^1.7.3"
   }
 }
