--- a/oj-server/package.json
+++ b/oj-server/package.json
@@ -13,6 +13,7 @@
     "express": "^4.15.2",
     "mongoose": "^4.8.7",
     "redis": "^2.7.1",
-    "socket.io": "^1.7.3"
+    "socket.io": "^1.7.3",
+    "node-rest-client": "^3.0.7"
   }
 }
