--- a/executor/Dockerfile
+++ b/executor/Dockerfile
@@ -2,7 +2,9 @@ FROM ubuntu:16.04
 
 MAINTAINER Rongjin Qiao
 
-RUN apt update
-RUN apt install -y gcc
-RUN apt install -y openjdk-8-jdk
-RUN apt install -y python
+RUN apt-get update && apt-get install -y --no-install-recommends apt-utils
+
+RUN apt-get update
+RUN apt-get install -y gcc
+RUN apt-get install -y openjdk-8-jdk
+RUN apt-get install -y python
