--- a/oj-server/package.json
+++ b/oj-server/package.json
@@ -15,5 +15,8 @@
     "redis": "^2.7.1",
     "socket.io": "^1.7.3",
     "node-rest-client": "^3.0.7"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.4"
   }
 }
