--- a/oj-client/package.json
+++ b/oj-client/package.json
@@ -22,7 +22,8 @@
     "@angular/router": "^3.3.1",
     "ace-builds": "^1.2.6",
     "angular2-jwt": "^0.1.28",
-    "auth0-lock": "^10.13.0",
+    "auth0-js": "^9.0.2",
+    "auth0-lock": "^11.0.1",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "jquery": "^3.1.1",
